<resources>
    <string name="app_name">My Intent App</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
    <string name="pindah_activity_dengan_object">Pindah Activity Dengan Object</string>
    <string name="dial_a_number">Dial A Number</string>
    <string name="pindah_activity_untuk_result">Pindah Activity Untuk result</string>
    <string name="by_ari_supriatna">By: Ari Supriatna</string>
    <string name="todo">TODO</string>
    <string name="home_move_activity">Home Move Activity</string>
    <string name="data_received">Data Received</string>
</resources>
